# planning-through-contact

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  main.py  matplotlibrc  pyproject.toml
.github/workflows/: lint.yaml  python-app.yml
analysis_scripts/: visualize_moment_balance.m
arbitrary_shape_pickles/: hammer_3_boxes.pkl  hammer_3_boxes_z_var.pkl  single_box.pkl  small_t_pusher.pkl  small_t_pusher_taller.pkl  three_boxes.pkl
config/: multi_experiment.yaml  single_experiment.yaml
config/hydra/: base_hydra.yaml
config/mpc_config/: base_mpc_config.yaml
config/optitrack_config/: tee_optitrack_config.yaml
config/realsense_config/: top_front_realsense.yaml  top_front_side_realsense.yaml
config/sim_config/: actuated_cylinder_sim_config.yaml  base_sim_config.yaml  iiwa_sim_config.yaml  old_real_iiwa_sim_config.yaml  real_actuated_cylinder_sim_config.yaml  real_iiwa_sim_config.yaml  test.yaml  test_sim_config.yaml
convex_relaxation/: mccormick.py  sdp.py
convex_relaxation/deprecated/: sdp_deprecated.py
delete_me/: test_one_stone_plan.pkl
deprecated/: run_demos.py
deprecated/geometry/: bezier.py  collision_pair.py
deprecated/planning/: gcs.py  graph_builder.py
examples/: large_scale.py  one_d_pusher.py  plan_planar_pushing.py  rotation.py
examples/rotation/: flipup.py  flipup_bilinear_relaxation.py  flipup_fixed_position.py  tests.py
experiments/: one_d_pusher.py
experiments/energy_minimization/: energy_minimization.py  energy_minimization_so3.py
experiments/manipulation-station/: manipulation_station.py
experiments/maximum-dissipation/: nonlinear_complementarity_constraints.py  rename.py
experiments/object-flipup/: box_flipup.py  flipup_w_sdp.py  polytope_flipup.py  polytope_flipup_mccormick.py  polytope_flipup_sdp.py  simple_flipup.py  triangle_flipup.py
experiments/planar_pushing/: deleteme.py  ellipsoidal_limit_surface.py  one_contact_mode.py  planar_pushing_gcs.py  simple_pushing_formulation.py  simple_pushing_formulation_in_world_frame.py
experiments/rotation/: flipup_bilinear_relaxation.py  flipup_fixed_position.py  flipup_newtons_third_law.py  so2_sdp_relaxation_tests.py
experiments/so2/: so2_sdp_relaxation_tests.py
geometry/: .contact.py.swp  .polyhedron.py.swo  .polyhedron.py.swp  bezier.py  box.py  collision_pair.py  contact.py  contact_mode.py  contact_point.py  hyperplane.py  polyhedron.py  rigid_body.py  utilities.py
geometry/collision_geometry/: box_2d.py  collision_geometry.py
geometry/contact_2d/: types.py
geometry/orientation/: contact_pair_2d.py  contact_point_2d.py
geometry/planar/: planar_contact_modes.py  planar_pose.py  trajectory_builder.py
geometry/two_d/: box_2d.py  equilateral_polytope_2d.py  rigid_body_2d.py  t_pusher.py
matlab_analysis/: analyze_sdp_tightness_with_energy_minimization  plot_so2_feasible_set_for_middle_ctrl_point.jl  visualize_envelopes.m
mvps/: mvps.py
notebooks/: planar_pushing.ipynb
planning/: .bezier.py.swp  .gcs.py.swp  contact_mode_motion_planner.py  gcs.py  graph_builder.py  planar_pushing_planner.py
planning_through_contact/analysis_scripts/: analyze_sdp_tightness_with_energy_minimization  analyze_sdp_tightness_with_energy_minimization.jl  plot_so2_feasible_set.jl  visualize_envelopes.m  (+3 more)
scripts/: create_arbitrary_shape_pickle.py  create_planar_pushing_plan.py  execute_planar_pushing_plan.py  fv_from_boxes.py  identify_high_angular_velocity.py  run_planar_pushing_position_control.py  run_planar_pushing_sim.py  visualize_planar_pushing_plan.py
tests/: utils.py
tools/: types.py  utils.py
visualize/: .visualize.py.swp  analysis.py  colors.py  planar.py  visualize.py  visualizer_2d.py
(+396 files in other folders)
